# multi-threaded-logparser-cpp

./: CMakeLists.txt  README.md  main.cpp
include/: LogAggregator.h  LogParserThread.h  LogReaderThread.h  LogRecord.h  SafeQueue.h  ThreadPool.h  writeParsedLogs.h
src/: LogAggregator.cpp  LogParserThread.cpp  LogReaderThread.cpp  LogRecord.cpp  ThreadPool.cpp  writeParsedLogs.cpp
